# keypal

./: .env.example  CLAUDE.md  Makefile  README.md  pyproject.toml
plugins/: marketplace.json
plugins/plugin-manager/.claude-plugin/: plugin.json
plugins/plugin-manager/skills/manage-mcp/: SKILL.md
plugins/plugin-manager/skills/manage-plugins/: SKILL.md
plugins/plugin-manager/skills/prototype-deployer/: SKILL.md
plugins/plugin-manager/skills/task-scheduler/: SKILL.md
scripts/: check-cert.sh  cleanup.sh  clear-schedule.sh  clear-service.sh  create-schedule.sh  deploy-prototype.sh  guardian.sh  healthcheck.sh  init.sh  install-mcp.sh  install-plugin.sh  list-mcp.sh  list-plugins.sh  list-schedules.sh  list-services.sh  pause-schedule.sh  resume-schedule.sh  service-monitor.sh  setup-ssl.sh  stop-service.sh  uninstall-mcp.sh  uninstall-plugin.sh  update-schedule.sh  watchdog.sh
src/keypal/: __main__.py  config.py
src/keypal/channels/telegram/: __init__.py  app.py  auth.py  prompt.py
src/keypal/channels/telegram/handlers/: __init__.py  commands.py  danger.py  git.py  mcp.py  messages.py  plugins.py  schedules.py  services.py
src/keypal/services/: chat.py  queue.py
tests/: test_config.py  test_danger.py  test_helpers.py  test_queue.py
