[project]
name = "keypal"
version = "0.1.0"
description = "A confidant who knows you deeply and helps you unconditionally — always."
readme = "README.md"
authors = [
    { name = "Foreverskyin0216", email = "foreverskyin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=22,<23",
    "pydantic-settings>=2.0",
    "claude-agent-sdk>=0.1.50",
]

[project.scripts]
keypal = "keypal.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "mypy>=1.14",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "ASYNC",# flake8-async
]

[tool.ruff.lint.isort]
known-first-party = ["keypal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
